--- a/package.json
+++ b/package.json
@@ -43,10 +43,11 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@rocketseat/eslint-config": "^2.2.2",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "eslint": "^8",
+    "eslint": "^8.57.1",
     "eslint-config-next": "14.2.16",
     "husky": "^9.1.6",
     "lint-staged": "^12.3.2",
